# sync-rm-briefing-ai

./: .env.example  .gitignore  .replit  COACHED_CALLS.md  DEMO_DAY.md  DEPLOY.md  HUBSPOT_RINGG_SETUP.md  INBOUND_SETUP.md  PIPEDRIVE_SETUP.md  README.md  RINGG_TOOLS_SETUP.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md  vercel.json
.github/workflows/: keepalive.yml
archive/: README.md
archive/api-server-deprecated/.replit-artifact/: artifact.toml
artifacts/sync-backend/: .env.example  .env.legacy.bak  .secret.key  config.py  database.py  main.py  models.py  requirements.txt  sync.db
artifacts/sync-backend/adapters/: base.py  dynamics.py  fake_leadsquared.py  freshworks.py  hubspot.py  leadsquared.py  mock_crm.py  pipedrive.py  salesforce.py  zoho.py
artifacts/sync-backend/db/: __init__.py  engine.py  models.py
artifacts/sync-dashboard/: Dockerfile  index.html  package.json  vercel.json  vite.config.ts
attached_assets/: Pasted--Claude-Code-Prompt-Build-SYNC-RM-Briefing-Voice-AI-Co-_1780730141753.txt
demo/: demo-script.md  qa-cheatsheet.md  roi-talking-points.md
lib/api-spec/: openapi.yaml
ringg/: agent-config.json  concierge-agent-config.json  morning-brief-agent-config.json  morning-brief-system-prompt.md  outreach-agent-config.json  outreach-system-prompt.md  setup-guide.md  system-prompt.md
scripts/: patch_concierge_prompt.py  pregenerate_theater_audio.py  seed_demo_data.py  seed_hubspot.py  seed_pipedrive.py  setup_ringg_agent.py  test_call.py  upload_knowledge_base.py
(+107 files in other folders)
