[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]
